--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,10 +1,11 @@
 {
-    "name": "db",
+    "name": "@ekklesia/db",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
     "scripts": {
-        "db:migrate": "sea-orm-cli migrate refresh",
+        "build": "cargo build",
+        "db:migrate": "sea-orm-cli migrate",
         "db:generate": "dotenv sea-orm-cli generate entity -u $DATABASE_URL -o src/entities"
     },
     "keywords": [],
