--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -1,9 +1,15 @@
 [package]
-name = "auth"
+name = "backend"
 version = "0.1.0"
 edition = "2021"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
+actix-cors = "0.7.0"
+actix-web = "4.5.1"
+db = { path = "../../packages/db"}
+dotenv = "0.15.0"
 base64 = "0.22.1"
 jsonwebtoken = "9.3.0"
 log = "0.4.21"
