--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -16,3 +16,5 @@ log = "0.4.21"
 reqwest = {version = "0.12.4", features= ["blocking", "json"]}
 serde = { version = "1.0.201", features = ["derive"]}
 serde_json = "1.0.117"
+actix-service = "2.0.2"
+futures = "0.3.30"
