--- a/packages/db/Cargo.toml
+++ b/packages/db/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
 futures = "0.3.30"
 uuid = {version = "1.8.0", features = ["v4"]}
+serde = "1.0.203"
