--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,13 +14,15 @@
     "dependencies": {
         "@tanstack/solid-query": "^5.18.0",
         "autoprefixer": "^10.4.19",
+        "ky": "^1.2.4",
         "postcss": "^8.4.38",
         "prettier": "3.2.5",
         "solid-js": "^1.8.7",
+        "ts-pattern": "^5.1.2",
         "typescript": "^5.4.5",
         "vite": "^5.2.11",
         "vite-plugin-solid": "^2.10.2",
-        "zod": "^3.23.8"
+        "zod": "3.22.4"
     },
     "devDependencies": {
         "tailwindcss": "^3.4.3"
