--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -9,7 +9,8 @@
         "jsxImportSource": "solid-js",
         "types": ["vite/client"],
         "noEmit": true,
-        "isolatedModules": true
+        "isolatedModules": true,
+        "strict": true
     },
     "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
