--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -18,3 +18,5 @@ serde = { version = "1.0.201", features = ["derive"]}
 serde_json = "1.0.117"
 actix-service = "2.0.2"
 futures = "0.3.30"
+actix-session = {version = "0.9.0", features = ["cookie-session"]}
+actix-identity = "0.7.1"
