--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@solidjs/router": "^0.13.5",
         "@tanstack/solid-query": "^5.18.0",
         "autoprefixer": "^10.4.19",
         "ky": "^1.2.4",
