--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,13 +12,18 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@kobalte/core": "^0.13.3",
         "@solidjs/router": "^0.13.5",
         "@tanstack/solid-query": "^5.18.0",
         "autoprefixer": "^10.4.19",
+        "butotn": "link:@kobalte/core/butotn",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
         "ky": "^1.2.4",
         "postcss": "^8.4.38",
         "prettier": "3.2.5",
         "solid-js": "^1.8.7",
+        "tailwind-merge": "^2.3.0",
         "ts-pattern": "^5.1.2",
         "typescript": "^5.4.5",
         "vite": "^5.2.11",
