--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "cargo build",
         "db:migrate": "sea-orm-cli migrate",
-        "db:generate": "dotenv sea-orm-cli generate entity -u $DATABASE_URL -o src/entities"
+        "db:generate": "dotenv sea-orm-cli generate entity -u $DATABASE_URL -o client/src/entities"
     },
     "keywords": [],
     "author": "",
