--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 actix-cors = "0.7.0"
 actix-web = "4.5.1"
-db = { path = "../../packages/db"}
+db = { path = "../../packages/db/client"}
 dotenv = "0.15.0"
 base64 = "0.22.1"
 jsonwebtoken = "9.3.0"
