--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,11 +12,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@capacitor/core": "^6.1.0",
+        "@capacitor/ios": "^6.1.0",
         "@kobalte/core": "^0.13.3",
         "@solidjs/router": "^0.13.5",
         "@tanstack/solid-query": "^5.18.0",
         "autoprefixer": "^10.4.19",
-        "butotn": "link:@kobalte/core/butotn",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "ky": "^1.2.4",
@@ -31,6 +32,7 @@
         "zod": "3.22.4"
     },
     "devDependencies": {
+        "@capacitor/cli": "^6.1.0",
         "tailwindcss": "^3.4.3"
     }
 }
