--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -5,6 +5,7 @@
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
+        "skipLibCheck": true,
         "jsx": "preserve",
         "jsxImportSource": "solid-js",
         "types": ["vite/client"],
@@ -12,5 +13,6 @@
         "isolatedModules": true,
         "strict": true
     },
-    "include": ["src/**/*.ts", "src/**/*.tsx"]
+    "include": ["src/**/*.ts", "src/**/*.tsx"],
+    "exclude": ["./node_modules"]
 }
