--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
+        "run": "vite preview",
         "type-check": "tsc"
     },
     "keywords": [],
