--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "scripts": {
         "build": "turbo build",
         "dev": "turbo dev",
-        "db:migrate": "pnpm --filter @ekklesia/db db:migrate"
+        "db:migrate": "pnpm --filter @ekklesia/db db:migrate",
+        "backend:build-docker": "docker build -t backend .",
+        "backend:start-docker": "docker run --env-file .env -p 127.0.0.1:8080:8080 backend"
     },
     "author": "Jacob McKenney",
     "license": "ISC"
