--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "cargo build --manifest-path client/Cargo.toml",
         "db:migrate": "sea-orm-cli migrate",
-        "db:generate": "dotenv sea-orm-cli generate entity -u $DATABASE_URL -o client/src/entities"
+        "db:generate": "sea-orm-cli generate entity --output-dir ./client/src/entities --with-copy-enums --with-serde both -u $DATABASE_URL "
     },
     "keywords": [],
     "author": "",
