--- a/packages/db/client/Cargo.toml
+++ b/packages/db/client/Cargo.toml
@@ -8,3 +8,5 @@ sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-st
 futures = "0.3.30"
 uuid = {version = "1.8.0", features = ["v4"]}
 serde = "1.0.203"
+chrono = "0.4.38"
+has-timestamps ={ path = "../macros/has-timestamps"}
