--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
 actix-cors = "0.7.0"
 actix-web = "4.5.1"
 db = { path = "../../packages/db/client"}
